--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="grid">
-    <div class="unit xs-1">
+    <div class="unit xs-1 s-1 m-1-2 l-1-3">
       <figure>
         <img class="img-flex" src="images/veggie-burger-1.jpg" alt="">
         <figcaption>
@@ -20,7 +20,7 @@
       </figure>
     </div>
 
-    <div class="unit xs-1">
+    <div class="unit xs-1 s-1 m-1-2 l-1-3">
       <figure>
         <img class="img-flex" src="images/veggie-burger-2.jpg" alt="">
         <figcaption>
@@ -29,7 +29,7 @@
       </figure>
     </div>
 
-    <div class="unit unit-xs-hidden">
+    <div class="unit unit-xs-hidden unit-s-hidden unit-m-hidded l-1-3">
       <figure>
         <img class="img-flex" src="images/veggie-burger-3.jpg" alt="">
         <figcaption>
